# research-company-plugin

./: .gitignore  LICENSE  README.md  doppler.yaml  pyproject.toml
.claude-plugin/: plugin.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
agents/: domain-expert.md  synthesis-agent.md  verifier.md
docs/: CONTRIBUTING.md
lib/: _cache.py  check_env.sh  kitchen_cli.py  render_brief.py  service_client.py
prompts/_shared/: identity-rules.md  insight-quality.md  output-schema.md
prompts/experts/: 01-market.md  02-sales.md  03-product.md  04-rd-tech.md  05-traffic.md  06-people.md  07-hiring.md  08-customers.md  09-money.md
skills/research-company/: SKILL.md
skills/research-company/references/: sanity-bounds.yaml  tools.md
tests/: test_cache.py  test_e2e_renderer.py  test_kitchen_cli.py  test_kitchen_cli_subcommands.py  test_render_brief.py  test_service_client.py  test_service_client_verify.py
tests/fixtures/: domains.stripe.json  synthesis.stripe.json  verifier.stripe.json
